--- a/package.json
+++ b/package.json
@@ -1,25 +1,33 @@
 {
-  "name": "ysdf",
+  "name": "ydsf-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "cd frontend && npm install && npm run build",
-    "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js"
-  },
-  "author": "",
-  "license": "ISC",
+  "main": "server.js",
   "dependencies": {
+    "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
-    "cloudinary": "^1.28.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.17.2",
-    "joi": "^17.6.0",
-    "joi-password-complexity": "^5.1.0",
+    "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.1",
-    "multer": "^1.4.4"
-  }
+    "mongoose": "^6.2.4",
+    "multer": "^1.4.4",
+    "pug": "^3.0.2"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DeepankRx/ydsf-project.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/DeepankRx/ydsf-project/issues"
+  },
+  "homepage": "https://github.com/DeepankRx/ydsf-project#readme"
 }
